--- a/assets/sass/_default/partials/_hero.sass
+++ b/assets/sass/_default/partials/_hero.sass
@@ -56,13 +56,15 @@
         caption
             @extend .visually-hidden
 
+
+    // aside sticky under hero
     & + aside
         .toc
-            overflow: auto
             padding-bottom: px2rem(10)
             padding-top: px2rem(10)
             @include media-breakpoint-down(md)
                 margin-left: px2rem(-15)
+                overflow: auto
                 padding-left: px2rem(15)
                 padding-right: px2rem(15)
                 width: calc(100% + 1.875rem)
