--- a/assets/sass/_default/layouts/_header.sass
+++ b/assets/sass/_default/layouts/_header.sass
@@ -3,7 +3,15 @@ header[role="banner"]
     color: white
     position: sticky
     top: 0
+    transition: top 0.4s
     z-index: 10
+    html.is-scrolling-down &
+        &:not(:hover)
+            top: -$header-height
+            @include media-breakpoint-down(lg)
+                top: -$header-height-md
+    &.is-sticky
+        position: sticky
     &::after
         background-color: rgba(white, .2)
         bottom: 0
@@ -12,7 +20,6 @@ header[role="banner"]
         left: 0
         position: absolute
         width: 100%
-
     .logo
         img
             height: 42px
