--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -7,7 +7,8 @@ $post-color: #4926AF
 $program-color: #004B1E
 
 $header-height: 102px
-$hero-height: calc(800px - #{$header-height})
+$header-height-md: 95px
+$hero-height: calc(800px - #{$header-height-md})
 $hero-height-sm: 300px
 $toc-height: 66px
 
