--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -14,12 +14,37 @@
 
     aside
         position: sticky
-        top: 0
         top: $header-height
+        transition: top 0.4s
         z-index: 1
+        html.is-scrolling-down &
+            top: 0px
+        @include media-breakpoint-down(lg)
+            top: $header-height-md
         @include media-breakpoint-up(md)
             margin-bottom: px2rem(128)
-
+        .toc
+            padding-bottom: px2rem(10)
+            padding-top: px2rem(10)
+            @include media-breakpoint-down(md)
+                margin-left: px2rem(-15)
+                overflow: auto
+                padding-left: px2rem(15)
+                padding-right: px2rem(15)
+                width: calc(100% + 1.875rem)
+            ol
+                flex-direction: row
+                flex-wrap: nowrap
+                justify-content: space-between
+                margin-right: -$nav-link-padding-x
+                margin-top: 0
+                li
+                    flex-shrink: 0
+                    margin-bottom: 0
+                a
+                    color: white
+            .active
+                color: white
     main
         .content
             > div
