--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -11,7 +11,7 @@ $hero-height: calc(800px - #{$header-height})
 $hero-height-sm: 300px
 $toc-height: 66px
 
-$menu-background-color: white
+$menu-background-color: transparent
 
 // Bootstrap variables
 $black: #000000
