--- a/assets/sass/home/_pages.sass
+++ b/assets/sass/home/_pages.sass
@@ -5,6 +5,8 @@
             @include media-breakpoint-up(md)
                 min-height: $hero-height
             > div:first-of-type:not(.title-avatar)
+                position: relative
+                z-index: 1
                 @include media-breakpoint-up(md)
                     max-width: 39%
         picture
