--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -18,6 +18,7 @@
 
 @import "blocks/chapter"
 @import "blocks/gallery"
+@import "blocks/key_figures"
 
 @import "diplomas/pages"
 @import "diplomas/widgets"
