--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -22,6 +22,7 @@ $primary: $black
 $body-bg: $white
 $body-color: $black
 $border-color: #C3C3C5
+$light: #F5F5F5
 
 $container-max-widths: ( sm: 100%, md: 100%, lg: 100%, xl: 100%, xxl: 1980px )
 $grid-gutter-width: 3.75rem
