--- a/assets/sass/_theme/blocks/_pages.sass
+++ b/assets/sass/_theme/blocks/_pages.sass
@@ -36,3 +36,33 @@
                 font-size: px2rem(18)
                 &::after
                     content: none
+
+// .block-pages
+//     background-color: $light
+//     padding-bottom: $grid-gutter-width
+//     padding-top: $grid-gutter-width
+//     @include media-breakpoint-up(lg)
+//         padding-bottom: px2rem(128)
+//         padding-top: px2rem(128)
+//     .main-page
+//         .title
+//             @extend .surtitle
+//             a
+//                 &::before
+//                     content: none
+//         .title + p
+//             @extend .h3
+//     .pages
+//         --bs-gutter-y: #{$grid-gutter-width}
+//         > *
+//             @extend .col-lg-4
+//             position: relative
+//             &::after
+//                 background-color: $border-color
+//                 content: ''
+//                 height: 100%
+//                 position: absolute
+//                 right: 0
+//                 top: 0
+//                 width: 1px
+//
