--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -23,7 +23,8 @@
 @import "diplomas/pages"
 @import "diplomas/widgets"
 @import "home/pages"
-@import "pages/"
+@import "pages/pages"
+@import "pages/widgets"
 @import "posts/pages"
 @import "programs/pages"
 @import "programs/widgets"
