--- a/assets/sass/_vendors/bootstrap/_container.sass
+++ b/assets/sass/_vendors/bootstrap/_container.sass
@@ -1,6 +1,12 @@
 .container
-    padding-left: px2rem(15)
-    padding-right: px2rem(15)
+    padding-left: 1rem
+    padding-right: 1rem
     @include media-breakpoint-up(lg)
         padding-left: $grid-gutter-width
         padding-right: $grid-gutter-width
+
+.content,
+.row
+    @include media-breakpoint-down(lg)
+        margin-left: -1rem
+        margin-right: -1rem
