--- a/assets/sass/_vendors/bootstrap/_container.sass
+++ b/assets/sass/_vendors/bootstrap/_container.sass
@@ -10,3 +10,6 @@
     @include media-breakpoint-down(lg)
         margin-left: -1rem
         margin-right: -1rem
+        > *
+            padding-left: 1rem
+            padding-right: 1rem
