--- a/assets/sass/_theme/_default/base/_typography.sass
+++ b/assets/sass/_theme/_default/base/_typography.sass
@@ -1,8 +1,10 @@
 h1
     font-weight: 600
+    @include media-breakpoint-up(md)
+        font-size: px2rem(50)
+        line-height: 120%
     @include media-breakpoint-up(lg)
         font-size: px2rem(60)
-        line-height: 120%
 h2
     @include media-breakpoint-up(lg)
         font-size: px2rem(60)
