--- a/assets/sass/home/_pages.sass
+++ b/assets/sass/home/_pages.sass
@@ -14,12 +14,15 @@
                 aspect-ratio: 8/6
                 display: block
                 margin-bottom: calc(#{$grid-gutter-width} / -2)
+            @include media-breakpoint-up(md)
+                width: 82.2%
             @include media-breakpoint-up(xl)
                 bottom: - $grid-gutter-width
+                left: 44.2%
                 position: absolute
                 right: $grid-gutter-width
                 top: px2rem(135)
-                width: calc(50% - #{$grid-gutter-width} / 2)
+                width: auto
             img
                 height: 100%
                 object-fit: cover
