--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -31,6 +31,7 @@ $spacer: 1.5rem
 $font-family-sans-serif: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
 $font-size-base: 1rem
 $line-height-base: 1.4
+$small-font-size: 1rem
 
 $h1-font-size: 1.875rem
 $h2-font-size: 1.5rem
