--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -16,6 +16,7 @@
 @import "_vendors/bootstrap/pagination"
 @import "_vendors/bootstrap/table"
 
+@import "blocks/blocks"
 @import "blocks/chapter"
 @import "blocks/gallery"
 @import "blocks/key_figures"
@@ -24,7 +25,6 @@
 @import "diplomas/widgets"
 @import "home/pages"
 @import "pages/pages"
-@import "pages/widgets"
 @import "posts/pages"
 @import "programs/pages"
 @import "programs/widgets"
