--- a/layouts/programs/list.html
+++ b/layouts/programs/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  {{ if .Params.diploma }}
+  {{ if .Params.diplomas }}
     {{ partial "programs/hero-single.html" . }}
     {{ partial "programs/show.html" . }}
   {{ else }}
