--- a/assets/sass/programs/_widgets.sass
+++ b/assets/sass/programs/_widgets.sass
@@ -4,6 +4,7 @@
             font-weight: $headings-font-weight
 
 ol.programs
+    padding-left: 0
     li
         a:first-of-type
             @extend .h3
