--- a/assets/sass/programs/_pages.sass
+++ b/assets/sass/programs/_pages.sass
@@ -44,8 +44,9 @@
                     margin-bottom: 0
                 a
                     color: white
+                    transition: opacity 0.4s
             .active
-                color: white
+                opacity: 0.5
     main
         .content
             > div
