--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -25,6 +25,7 @@
 @import "diplomas/widgets"
 @import "home/pages"
 @import "pages/pages"
+@import "pages/widgets"
 @import "posts/pages"
 @import "programs/pages"
 @import "programs/widgets"
