remove specific sticky

--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -6,6 +6,7 @@ $institute-color: #001F5C
 $post-color: #4926AF
 $program-color: #004B1E
 
+$enable-header-sticky: true
 $header-height: 102px
 $header-height-md: 95px
 $hero-height: calc(800px - #{$header-height-md})
