--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -6,14 +6,19 @@ $institute-color: #001F5C
 $post-color: #4926AF
 $program-color: #004B1E
 
+// Header
 $enable-header-sticky: true
-$header-height: 102px
-$header-height-md: 95px
-$hero-height: calc(800px - #{$header-height-md})
-$hero-height-sm: 300px
+$header-background-color: transparent
+$header-height: 95px
+$header-height-md: 102px
+
+// Hero
+$hero-height: 300px
+$hero-height-md: calc(800px - #{$header-height-md})
+
+// Toc
 $toc-height: 66px
 
-$menu-background-color: transparent
 
 // Bootstrap variables
 $black: #000000
