--- a/assets/sass/_default/layouts/_footer.sass
+++ b/assets/sass/_default/layouts/_footer.sass
@@ -3,7 +3,7 @@ footer[role="contentinfo"]
     color: white
     padding-bottom: px2rem(60)
     padding-top: px2rem(60)
-    @include media-breakpoint-up(md)
+    @include media-breakpoint-up(lg)
         height: 800px
         padding-bottom: 0
         position: relative
@@ -40,7 +40,22 @@ footer[role="contentinfo"]
             margin-bottom: 0
 
     .complementary
-        @include media-breakpoint-up(md)
+        @include media-breakpoint-only(md)
+            flex-wrap: wrap
+            .nav-social
+                width: 100%
+            .credit + [class^="nav-"]
+                margin-left: -1rem
+        @include media-breakpoint-down(md)
+            display: flex
+            flex-direction: column
+            .nav-social
+                order: 1
+            .nav-legal
+                order: 2
+            .credit
+                order: 3
+        @include media-breakpoint-up(lg)
             padding-bottom: calc(#{$spacer} * 2)
             padding-top: calc(#{$spacer} * 2)
 
