--- a/assets/sass/_default/partials/_menu.sass
+++ b/assets/sass/_default/partials/_menu.sass
@@ -10,3 +10,9 @@
                 @include media-breakpoint-up(lg)
                     padding-left: 1rem
                     padding-right: 1rem
+
+        & > .has-children
+            li a,
+            li span
+                padding-bottom: .35rem
+                padding-top: .35rem
