--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -73,16 +73,15 @@ $dropdown-border-width: 0
 $dropdown-border-radius: 0
 $dropdown-item-padding-x: 1rem
 
+$dropdown-item-padding-y: 1rem
+$dropdown-item-padding-x: $spacer
+
 $blockquote-font-size: 1.875rem
 
 $input-btn-font-family: $font-family-sans-serif
 
 $modal-backdrop-opacity: .9
 
-// $nav-link-font-size: px2rem(22)
-// $nav-link-padding-y: 0
-// $nav-link-padding-x: .75rem
-//
 $navbar-brand-padding-y: 0
 $navbar-brand-margin-end: 0
 $navbar-padding-y: px2rem(30)
@@ -92,6 +91,3 @@ $pagination-border-width: 0
 $pagination-active-bg: transparent
 $pagination-active-color: rgba(black, .65)
 $pagination-disabled-color: #DADADA
-
-
-// $enable-caret: false
