--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -1,6 +1,5 @@
 // Site variables
 $recherche: #EB7100
-
 $site-color: #4C1540
 $institute-color: #001F5C
 $post-color: #4926AF
@@ -8,7 +7,7 @@ $program-color: #004B1E
 
 // Header
 $enable-header-sticky: true
-$header-background-color: transparent
+$header-background-color: $site-color
 $header-height: 95px
 $header-height-md: 102px
 
