--- a/assets/sass/home/_pages.sass
+++ b/assets/sass/home/_pages.sass
@@ -3,7 +3,7 @@
         overflow: visible
         .container
             @include media-breakpoint-up(md)
-                min-height: $hero-height
+                min-height: $hero-height-md
             > div:first-of-type:not(.title-avatar)
                 position: relative
                 z-index: 1
