--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -20,6 +20,7 @@
 @import "blocks/chapter"
 @import "blocks/gallery"
 @import "blocks/key_figures"
+@import "blocks/pages"
 
 @import "diplomas/pages"
 @import "diplomas/widgets"
