--- a/assets/sass/blocks/_gallery.sass
+++ b/assets/sass/blocks/_gallery.sass
@@ -1,29 +1,32 @@
-// .block-gallery
-//     @include in-page-without-aside
-//         background-color: black
-//         color: white
-//         padding-bottom: px2rem(64)
-//         padding-top: px2rem(64)
-//         figure
-//             >  a
-//                 margin-bottom: px2rem(24)
-//             figcaption
-//                 font-size: px2rem(22)
-//                 font-weight: 500
-//                 line-height: 140%
-//         .splide
-//             display: flex
-//             flex-direction: column
-//             &__arrows
-//                 filter: invert(1)
-//                 order: 2
-//             &__arrow
-//                 &--prev,
-//                 &--next
-//                     height: 48px
-//                     padding: 0
-//                     position: static
-//                     width: 48px
-//                     svg
-//                         // transform: scale(.4)
-//                         width: 100%
+.block-gallery
+    &--carousel
+        background-color: black
+        color: white
+        padding-bottom: px2rem(64)
+        padding-top: px2rem(64)
+        position: relative
+        .block-content
+            padding-left: #{$grid-gutter-width / 2} !important
+        figure
+            >  a
+                margin-bottom: px2rem(24)
+            figcaption
+                font-size: px2rem(22)
+                font-weight: 500
+                line-height: 140%
+        .splide
+            display: flex
+            flex-direction: column
+            &__arrows
+                filter: invert(1)
+                order: 2
+            &__arrow
+                &--prev,
+                &--next
+                    height: 48px
+                    padding: 0
+                    position: static
+                    width: 48px
+                    svg
+                        // transform: scale(.4)
+                        width: 100%
