--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -11,6 +11,8 @@ $header-background-color: $site-color
 $header-height: 95px
 $header-height-md: 102px
 
+$menu-background-color: $site-color
+
 // Hero
 $hero-height: 300px
 $hero-height-md: calc(800px - #{$header-height-md})
