--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -6,12 +6,27 @@
 
 @import "_default/partials/hero"
 @import "_default/partials/menu"
+@import "_default/partials/menu-expand"
 @import "_default/partials/sticky"
 @import "_default/partials/toc"
+@import "_default/partials/top"
 
+@import "_vendors/bootstrap/breadcrumb"
+@import "_vendors/bootstrap/container"
+@import "_vendors/bootstrap/pagination"
+@import "_vendors/bootstrap/table"
+
+@import "blocks/blocks"
+@import "blocks/chapter"
+@import "blocks/gallery"
+@import "blocks/key_figures"
+@import "blocks/pages"
+
+@import "diplomas/pages"
+@import "diplomas/widgets"
+@import "home/pages"
 @import "pages/pages"
-@import "persons/widgets"
+@import "pages/widgets"
 @import "posts/pages"
-@import "posts/widgets"
 @import "programs/pages"
 @import "programs/widgets"
