--- a/assets/sass/_default/layouts/_footer.sass
+++ b/assets/sass/_default/layouts/_footer.sass
@@ -1,33 +1,73 @@
 footer[role="contentinfo"]
+    background-color: black
+    color: white
+    padding-bottom: px2rem(60)
+    padding-top: px2rem(60)
+    @include media-breakpoint-up(lg)
+        height: 800px
+        padding-bottom: 0
+        position: relative
+        &::after
+            background-color: rgba(white, 0.3)
+            bottom: calc(#{$spacer} * 5)
+            content: ''
+            height: 1px
+            left: 0
+            position: absolute
+            width: 100%
+
+    .container
+        display: flex
+        flex-direction: column
+        height: 100%
+        justify-content: space-between
+
     .logo
-        display: inline-block
-        margin-left: -12px
-        margin-top: -5px
         img
-            height: 160px
+            height: 30px
+            @include media-breakpoint-up(md)
+                height: 42px
 
-    nav
-        @extend .footer-nav-expand
+    .content
+        @include media-breakpoint-up(md)
+            > div
+                width: 50%
+            > div:nth-child(2)
+                text-align: right
+        > div:nth-child(3)
+            display: none
+        p
+            margin-bottom: 0
 
-        .nav-levels
-            > li
-                & > a,
-                & > span
-                    display: block
-                    font-size: $h2-font-size
-                    font-weight: $headings-font-weight
-                    line-height: px2rem(36)
-                    margin-bottom: px2rem(10)
-                    position: relative
-                    &::after
-                        background-color: $border-color
-                        bottom: 0
-                        content: ''
-                        height: 1px
-                        left: $nav-link-padding-x
-                        position: absolute
-                        right: 0
+    .complementary
+        @include media-breakpoint-only(md)
+            flex-wrap: wrap
+            .nav-social
+                width: 100%
+            .credit + [class^="nav-"]
+                margin-left: -1rem
+        @include media-breakpoint-down(md)
+            display: flex
+            flex-direction: column
+            .nav-social
+                order: 1
+            .nav-legal
+                order: 2
+            .credit
+                order: 3
+        @include media-breakpoint-up(lg)
+            padding-bottom: calc(#{$spacer} * 2)
+            padding-top: calc(#{$spacer} * 2)
 
     .credit
         font-family: $font-family-sans-serif
         font-size: px2rem(14)
+
+    .nav-level-1,
+    &
+        a
+            color: white
+            text-decoration-color: rgba(white, .3)
+            &:hover
+                color: white
+                text-decoration-color: white
