--- a/assets/sass/_default/layouts/_header.sass
+++ b/assets/sass/_default/layouts/_header.sass
@@ -1,19 +1,18 @@
 header[role="banner"]
-    background-color: white
-    position: sticky
-    top: 0
-    z-index: 10
-
+    &::after
+        background-color: rgba(white, .2)
+        bottom: 0
+        content: ''
+        height: 1px
+        left: 0
+        position: absolute
+        width: 100%
     .logo
         img
             height: 42px
             @include media-breakpoint-down(lg)
                 height: 30px
 
-    @include media-breakpoint-up(lg)
-        .nav-level-1
-            & > li
-                & > a,
-                & > span
-                    padding-left: 1rem
-                    padding-right: 1rem
+    nav[role="navigation"]
+        button[type="button"]
+            color: white
