--- a/assets/sass/_default/partials/_hero.sass
+++ b/assets/sass/_default/partials/_hero.sass
@@ -1,15 +1,54 @@
 .hero
-    background-color: $site
+    align-items: normal
+    background-color: $site-color
+    flex-direction: column
+    padding-bottom: 0
+    padding-top: px2rem(32)
     @include media-breakpoint-up(md)
-        background-image: url('/assets/images/glyph.svg')
-        background-position: right
-        background-repeat: no-repeat
-        background-size: auto 100%
+        margin-bottom: px2rem(128)
 
-    > picture
-        img
-            filter: blur(16px) grayscale(100%)
-            mix-blend-mode: overlay
+    p
+        margin-bottom: 0
 
-    h1
-        font-weight: 400
+    > div:first-of-type
+        > div
+            margin-top: $grid-gutter-width
+            @include media-breakpoint-up(md)
+                margin-top: px2rem(120)
+
+    > div + div
+        margin-top: auto
+        .container
+            padding-bottom: px2rem(12)
+            padding-top: px2rem(12)
+        &::before
+            background-color: rgba(white, .2)
+            content: ''
+            display: block
+            height: 1px
+            width: 100%
+        & + aside
+            margin-top: 0
+
+    .container .title-avatar
+        align-items: flex-start
+        > h1
+            @extend .col-8
+        > div
+            @extend .col-4
+
+    dl
+        @extend .row
+        font-size: px2rem(18)
+        margin-bottom: 0
+        dt,
+        dd
+            margin-bottom: 0
+            padding-bottom: px2rem(12)
+            padding-top: px2rem(12)
+        dt
+            @extend .col-md-3
+            font-weight: $font-weight-normal
+            opacity: .8
+        dd
+            @extend .col-md-9
