--- a/assets/sass/_default/partials/_menu.sass
+++ b/assets/sass/_default/partials/_menu.sass
@@ -1,2 +1,29 @@
 .menu
     @extend .menu-expand
+    @include media-breakpoint-down(lg)
+        margin-left: -1rem
+        margin-right: -1rem
+        > ul li,
+        .nav-level-1 > .has-children li
+            a,
+            span
+                padding-left: 1rem
+                padding-right: 1rem
+        > ul li
+            a,
+            span
+                padding-bottom: 1rem
+                padding-top: 1rem
+
+    .nav-level-1
+        > li
+            @include media-breakpoint-up(lg)
+                margin-left: px2rem(10)
+            > a,
+            > span
+                color: white
+        & > .has-children
+            li a,
+            li span
+                padding-bottom: .35rem
+                padding-top: .35rem
