--- a/assets/sass/_theme/_default/configuration/_site.sass
+++ b/assets/sass/_theme/_default/configuration/_site.sass
@@ -1,12 +1,25 @@
 // Site variables
-$site:      #002539
-$institut:  #176CAF
-$diplomes:  #CA0051
-$post:      #007960
 $recherche: #EB7100
-$header-height: 90px
+$site-color: #4C1540
+$institute-color: #001F5C
+$post-color: #4926AF
+$program-color: #004B1E
 
-$menu-background-color: white
+// Header
+$enable-header-sticky: true
+$header-background-color: $site-color
+$header-height: 95px
+$header-height-md: 102px
+
+$menu-background-color: $site-color
+
+// Hero
+$hero-height: 300px
+$hero-height-md: calc(800px - #{$header-height-md})
+
+// Toc
+$toc-height: 66px
+
 
 // Bootstrap variables
 $black: #000000
@@ -15,65 +28,67 @@ $light: #ECECEC
 $primary: $black
 $body-bg: $white
 $body-color: $black
+$border-color: #C3C3C5
+$border-color: rgba(black, .2)
+$light: #F5F5F5
 
-$border-radius: 0
-$border-radius-lg: 0
-$border-radius-sm: 0
+$container-max-widths: ( sm: 100%, md: 100%, lg: 100%, xl: 100%, xxl: 1980px )
+$grid-gutter-width: 3.75rem
+$spacer: 1.5rem
 
-$grid-gutter-width: 1.5rem
+$font-family-sans-serif: 'Inter', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+$font-size-base: 1rem
+$line-height-base: 1.4
+$small-font-size: 1rem
 
-$font-family-sans-serif: 'Montserrat', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
-$font-size-root: 1rem
-$font-size-base: 1.125rem
-$line-height-base: 1.666667
-$h1-font-size: $font-size-root * 3.5
-$h2-font-size: $font-size-root * 1.625
-$h3-font-size: $font-size-root * 1.3
+$h1-font-size: 1.875rem
+$h2-font-size: 1.5rem
+$h3-font-size: 1.25rem
+$h4-font-size: 1.125rem
+$h5-font-size: 1rem
+$h6-font-size: 1rem
 
-$headings-margin-bottom: $grid-gutter-width
-$headings-font-weight: 600
+$headings-margin-bottom: px2rem(24)
+$headings-font-family: 'Basier Circle', system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"
+$headings-font-weight: 500
 
-$font-weight-bold: 600
-$font-weight-bolder: 600
+$font-weight-bold: 700
+$font-weight-bolder: 700
 
-$lead-font-size: px2rem(22)
-$lead-font-weight: 400
+$lead-font-size: 1.25rem
+$lead-font-weight: 500
+
+$paragraph-margin-bottom: $spacer
 
 $breadcrumb-active-color: $white
-$breadcrumb-divider-color: $white
-$breadcrumb-font-size: px2rem(13)
-$breadcrumb-margin-bottom: 0
+$breadcrumb-divider-color: rgba($white, .5)
+$breadcrumb-divider: quote(">")
+$breadcrumb-font-size: px2rem(18)
+$breadcrumb-link-color: rgba($white, .8)
+$breadcrumb-item-padding-x: px2rem(18)
 
-$card-title-spacer-y: 0
-
-$dropdown-font-size: px2rem(14)
+// $card-title-spacer-y: 0
+//
+// $dropdown-font-size: px2rem(14)
 $dropdown-border-width: 0
 $dropdown-border-radius: 0
-$dropdown-item-padding-x: .75rem
+$dropdown-item-padding-x: 1rem
 
-$blockquote-font-size: px2rem(22)
+$dropdown-item-padding-y: 1rem
+$dropdown-item-padding-x: $spacer
+
+$blockquote-font-size: 1.875rem
 
 $input-btn-font-family: $font-family-sans-serif
 
 $modal-backdrop-opacity: .9
 
-$nav-link-font-size: px2rem(22)
-$nav-link-padding-y: 0
-$nav-link-padding-x: .75rem
-
 $navbar-brand-padding-y: 0
 $navbar-brand-margin-end: 0
-$navbar-padding-y: $grid-gutter-width
+$navbar-padding-y: px2rem(30)
 $navbar-nav-link-padding-x: 1rem
 
 $pagination-border-width: 0
 $pagination-active-bg: transparent
 $pagination-active-color: rgba(black, .65)
 $pagination-disabled-color: #DADADA
-
-$spacer: 1rem
-$spacers: (0: 0, 1: $spacer / 2, 2: $spacer, 3: $spacer * 2, 4: $spacer * 3, 5: $spacer * 6)
-
-$table-th-font-weight: 400
-
-$enable-caret: false
