--- a/assets/sass/_theme/posts/_widgets.sass
+++ b/assets/sass/_theme/posts/_widgets.sass
@@ -26,7 +26,7 @@
         font-size: 18px
         line-height: 120%
 
-div:not(.block-content) > .posts
+*:not(.block-content) > .posts
     > div
         border-bottom: 1px solid $border-color
         margin-bottom: $grid-gutter-width
