--- a/assets/sass/_theme/_default/base/_typography.sass
+++ b/assets/sass/_theme/_default/base/_typography.sass
@@ -31,7 +31,8 @@ p, li
     font-size: px2rem(16)
     line-height: 140%
     @include media-breakpoint-up(lg)
-        font-size: px2rem(22)
+        font-size: px2rem(20)
+        line-height: 150%
 
 .surtitle
     font-family: $headings-font-family
